--- a/package.json
+++ b/package.json
@@ -27,18 +27,23 @@
   "homepage": "https://github.com/zalmoxisus/remotedev-server",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.4.1",
     "cors": "^2.7.1",
     "ejs": "^2.4.1",
     "express": "^4.13.3",
     "getport": "^0.1.0",
-    "js-data": "^2.9.0",
+    "js-data": "^3.0.3",
     "lodash": "^4.15.0",
     "minimist": "^1.2.0",
     "object-assign": "^4.0.0",
     "repeat-string": "^1.5.4",
     "semver": "^5.3.0",
-    "socketcluster": "^8.0.0",
+    "socketcluster": "^14.1.1",
     "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.0",
+    "sc-framework-health-check": "^2.0.0",
+    "sc-uws": "^10.148.1"
   }
 }
