--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "remotedev-server",
-  "version": "0.2.5",
+  "name": "@jerexyz/remotedev-server",
+  "version": "0.3.3",
   "description": "Run the RemoteDev monitor on your local server.",
   "main": "index.js",
   "bin": {
@@ -39,11 +39,9 @@
     "repeat-string": "^1.5.4",
     "semver": "^5.3.0",
     "socketcluster": "^14.1.1",
-    "uuid": "^3.2.1"
-  },
-  "devDependencies": {
+    "uuid": "^3.2.1",
     "morgan": "^1.9.0",
-    "sc-framework-health-check": "^2.0.0",
-    "sc-uws": "^10.148.1"
-  }
+    "sc-framework-health-check": "^2.0.0"
+  },
+  "devDependencies": {}
 }
